[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.6"
num-traits = "0.2.15"
aoc-runner = { path = "./aoc-runner" }
derive-aoc-runner = { path = "./derive-aoc-runner" }
rustc-hash = "1.1.0"
criterion = "0.4.0"
im = "15.1.0"

[[bench]]
name = "aoc_2022_bench"
harness = false
